# Deep_OJ

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  Dockerfile  FAILURE_MODES.md  Makefile  PROGRESS.md  README.md  RUNBOOK.md  TASK.md  b1_no_etcd_unified.diff  b2_no_legacy_dataplane_unified.diff  bench_report.md  changes.txt  check_env.sh  config.docker.yaml  config.yaml  docker-compose.observability.yml  docker-compose.verify-process-cleanup.yml  docker-compose.yml  generate_protos.sh  tatus --short
config/: prometheus.yml
deploy/cluster/: .env.example  config.control.example.yaml  config.worker.example.yaml  node-control.compose.yml  node-minio.compose.yml  node-stateful.compose.yml  node-worker.compose.yml  prometheus.yml
deploy/cluster/scripts/: check_node_prerequisites.sh  healthcheck_control.sh  init_role_config.sh  run_s1_load_1h.sh  start_role.sh
docker/: Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker
docker/observability/grafana/dashboards/: deep-oj-overview.json
docker/observability/grafana/provisioning/dashboards/: deep-oj.yml
docker/observability/grafana/provisioning/datasources/: deep-oj.yml
docker/observability/prometheus/: prometheus.yml
docs/: REPO_SURVEY.md  capacity_model.md  cli_contract.md  consistency.md  low_cost_cloud_cluster.md  runbook.md  sandbox_threat_model.md
go/: go.mod  go.sum
go/cmd/api/: main.go
go/cmd/scheduler/: main.go
go/internal/api/: auth.go  handler.go  metrics.go  middleware.go
go/internal/model/: model.go  user.go
go/internal/repository/: postgres.go  redis.go  user.go
go/internal/scheduler/: ack_listener.go  discovery.go  dispatch.go  metrics.go  slow_path.go
go/pb/: judge.pb.go  judge_grpc.pb.go
go/pkg/proto/: judge.pb.go  judge_grpc.pb.go
proto/: judge.pb.go  judge.proto
scripts/: audit_config_coverage.sh  bench_outbox_fault_matrix.sh  benchmark_submit.go  check_deps.go  collect_coverage.sh  collect_resume_metrics.sh  collect_stream_pressure.sh  debug_submit_json.py  fault_injection.sh  repo_survey_probe.sh  setcaps.sh  setup_cgroups.sh  smoke_e2e.sh  start_docker.sh  start_integration.sh  submit_load_loop.sh  test_collect_stream_pressure.sh  verify_api_backpressure.sh  verify_b1_no_etcd.sh  verify_b2_no_legacy_dataplane.sh  verify_b3_control_plane.sh  verify_c1_stream_enqueue.sh  verify_ci.sh  verify_crash_recovery.sh  verify_d1_outbox.sh  verify_d3_backpressure.sh  verify_end_to_end_flow.sh  verify_f3_worker_concurrency.sh  verify_g1_kill_all.sh  verify_g1_prereq.sh  verify_mvp2_e2e.sh  verify_mvp3_crash_recover.sh  verify_mvp4_observability.sh  verify_no_etcd_runtime.sh  verify_no_legacy_dataplane.sh  verify_observability_pipeline.sh  verify_outbox_relay_recovery.sh  verify_sandbox_prerequisites.sh  verify_scheduler_control_plane.sh  verify_stream_enqueue_payload.sh  (+2 more)
sql/migrations/: 001_init.sql  002_add_problems_table.sql  003_add_users_table.sql  004_add_submission_state_and_indexes.sql  005_add_submission_foreign_keys.sql  006_add_attempt_lease_and_error_fields.sql  007_add_outbox_events.sql
src/api/: main.cpp
src/core/worker/: cgroup_manager.cpp  cgroup_manager.h  config.cpp  main.cpp  sandbox.cpp  sandbox.h  sandbox_internal.h  sandbox_isolation.cpp  sandbox_isolation.h  seccomp_rules.cpp  seccomp_rules.h
src/go/: go.mod  go.sum
src/go/cmd/api/: main.go
src/go/cmd/scheduler/: main.go
src/go/cmd/worker/: main.go
src/go/internal/api/: auth.go  env.go  handler.go  handler_problem.go  metrics.go  middleware.go  outbox_dispatcher.go  outbox_dispatcher_test.go  stream_enqueue.go  stream_enqueue_test.go
src/go/internal/appconfig/: config.go
src/go/internal/model/: model.go  user.go
src/go/internal/repository/: env.go  minio.go  postgres.go  postgres_outbox.go  postgres_outbox_test.go  problem_repo.go  redis.go  user.go
src/go/internal/scheduler/: ack_listener.go  control_plane_config.go  control_plane_db.go  discovery.go  discovery_test.go  dispatch.go  env.go  gc_loop.go  legacy_guard.go  metrics.go  repair_loop.go  retry.go  slow_path.go  watchdog.go
src/go/internal/survey/: validator.go  validator_test.go
src/go/internal/worker/: attempt_context.go  config.go  config_test.go  executor.go  executor_drain_test.go  judge.go  judge_json_test.go  judge_protocol_test.go  logging.go  logging_test.go  metrics.go  metrics_b4_test.go  minio.go  minio_test.go  stream_consumer.go  stream_consumer_test.go
src/go/pkg/common/: consts.go  errors.go  keyspace.go  keyspace_test.go
src/go/pkg/observability/: logger.go  metrics.go
src/go/pkg/proto/: judge.pb.go  judge_grpc.pb.go
src/scheduler/: main.cpp
src/worker/: cgroup_manager.cpp  config.cpp  etcd_registry.cpp  etcd_registry.h  main.cpp  sandbox.cpp  sandbox.h  sandbox_internal.h  sandbox_isolation.cpp
tests/: compile_fail_test.cpp  integration_test.py  run_tests.sh  security_integration_test.cpp  security_test.cpp  submit_test.cpp  test.cpp  test.py
tests/functional/test_codes/: ac_aplusb.cpp  ac_hello.cpp  ce_syntax.cpp  ce_undefined.cpp  mle_gradual.cpp  re_array_oob.cpp  re_divzero.cpp  re_nullptr.cpp  re_stackoverflow.cpp  tle_cpu_intensive.cpp  tle_infinite_loop.cpp  wa_aplusb.cpp
tests/integration/: test_e2e.py  test_problem_validation.py
tests/security/test_codes/: async_fork_bomb.cpp  escape_test.cpp  filesystem_escape.cpp  fork_bomb.cpp  memory_bomb.cpp  multithread_bypass.cpp  network_test.cpp  output_bomb.cpp  ptrace_test.cpp  signal_attack.cpp  syscall_attack.cpp
